<resources>
    <string name="app_name">StylistPark</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="being_not">Being not</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="dont_save">Not save</string>
    <string name="save_ok">Save OK</string>
    <string name="my_new">New</string>
    <string name="add">Add</string>
    <string name="all">All</string>
    <string name="select_all">All</string>
    <string name="total">Total：</string>
    <string name="item_price">Price：</string>
    <string name="item_number">Number：</string>
    <string name="item_select_no">Select：</string>
    <string name="item_select_ok">Selected：</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="clean">Clear</string>
    <string name="done">Done</string>
    <string name="desc">""</string>
    <string name="dot">・</string>
    <string name="sign_semicolon">：</string>
    <string name="time_divided">:</string>
    <string name="number_0">0</string>
    <string name="num_total">Total %1$d piece</string>
    <string name="prompt">Operation Prompt</string>
    <string name="delete">Delete</string>
    <string name="delete_pain">Delete</string>
    <string name="delete_think">Cancel</string>
    <string name="delete_confirm">&#160;Sure to delete？</string>
    <string name="leave_confirm">Leave</string>
    <string name="abandon_confirm">Sure to abandon？</string>
    <string name="send_confirm">Confirm send</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="submit_success">Submit success</string>
    <string name="not_empty">&#160;can not be empty</string>
    <string name="setting">Setting</string>
    <string name="other">Other</string>
    <string name="error">Error</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="edit">Edit</string>
    <string name="unfold">Unfold</string>
    <string name="put_away">Put away</string>
    <string name="day">d&#160;</string>
    <string name="hour">h&#160;</string>
    <string name="minute">m&#160;</string>
    <string name="second">s</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="toast_exit_prompt">Click again to exit the program</string>
    <string name="toast_server_busy">Server busy! Please try again later!</string>
    <string name="toast_error_data_null">Data error! Please reload the page!</string>
    <string name="dialog_leave_app">Leave STYLISTPARK ?</string>
    <string name="dialog_version_new">Your current version is the latest version</string>
    <string name="dialog_version_update">Detected a new version, click OK to start the update.</string>
    <string name="dialog_version_update_force">Your current version is below the minimum version! Need to be upgraded to normal use!</string>
    <string name="dialog_error_msg">Error. Please Try Again.</string>
    <string name="dialog_error_video_url">Video error can not be played</string>
    <string name="network">Network</string>
    <string name="network_closed">Cannot connect to Stylistpark.</string>
    <string name="network_fault">Please check your internet connection.</string>
    <string name="network_no_wifi">I recommend you watch the video in the Wifi network</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_pull_refresh">Pull down refresh</string>
    <string name="loading_release_refresh">Release refreshed</string>
    <string name="loading_loading">Loading&#8230;</string>
    <string name="loading_update_time">Last update time </string>
    <string name="loading_load_more">Load more</string>
    <string name="loading_strive_loading">Strive loading&#8230;</string>
    <string name="loading_no_more">No more ~</string>
    <string name="loading_no_data">You have not %1$s !</string>
    <string name="loading_click_load">Click load</string>
    <string name="loading_submit_fail">Upload failed</string>
    <string name="home_tab_text_one">Home</string>
    <string name="home_tab_text_two">@string/title_category</string>
    <string name="home_tab_text_three">Find</string>
    <string name="home_tab_text_four">Cart</string>
    <string name="home_tab_text_five">Profile</string>
    <string name="home_txt_hot_goods">Hot goods</string>
    <string name="home_txt_today_topics">Today topics</string>
    <string name="home_txt_limit_events">Limit events</string>
    <string name="title_category">Category</string>
    <string name="title_screen">Screen</string>
    <string name="title_qr_code_scan">QR Code Scan</string>
    <string name="title_fragment_three">Special Events</string>
    <string name="title_fragment_four">My Cart</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_login">User Login</string>
    <string name="title_register">Email Register</string>
    <string name="title_reset">Reset Password</string>
    <string name="title_my_address">My Address</string>
    <string name="title_delivery_info">Delivery Information</string>
    <string name="title_order_confirm">Confirm Order</string>
    <string name="title_order_detail">Order Details</string>
    <string name="product_top_tab_1">Default</string>
    <string name="product_top_tab_2">Sales</string>
    <string name="product_top_tab_3">Price</string>
    <string name="product_top_tab_4">Brands</string>
    <string name="product_detail_tab_1">Detail</string>
    <string name="product_detail_tab_2">Comment</string>
    <string name="product_detail_tab_3">Collages</string>
    <string name="product_clear_options">Clear options</string>
    <string name="product_stock">Stock</string>
    <string name="product_search">Go</string>
    <string name="product_search_hot">Hot</string>
    <string name="product_search_hot_words_1">Cosmetic</string>
    <string name="product_search_hot_words_2">Skirt</string>
    <string name="product_search_hot_words_3">Shoe</string>
    <string name="product_search_hot_words_4">Bag</string>
    <string name="product_search_et_hint">Keyword input goods</string>
    <string name="product_search_history">Historical Search</string>
    <string name="product_search_history_no">No search records</string>
    <string name="product_search_history_clear">Clear history</string>
    <string name="product_search_no_data">Could not find the specified goods</string>
    <string name="product_price_fell">Price</string>
    <string name="product_price_full">Full price : </string>
    <string name="product_full_minus">Minus</string>
    <string name="product_mail"> Mail</string>
    <string name="product_genuine_safeguard">Safeguard</string>
    <string name="product_carefree_return">Exchanged</string>
    <string name="product_cash_delivery">Cash Pay</string>
    <string name="product_brand_go">Go Brand</string>
    <string name="product_play_video">Video</string>
    <string name="product_collection">Concerns</string>
    <string name="product_cart">Cart</string>
    <string name="product_call">Call</string>
    <string name="product_add_cart">Add Cart</string>
    <string name="product_buy_number">Buy Number</string>
    <string name="product_color_size">Color Size</string>
    <string name="product_drag_up">Continue to drag, Check the graphic details</string>
    <string name="product_drag_down">Continue to drag, Check the product introduction</string>
    <string name="cart_no_goods">Shopping cart is not goods</string>
    <string name="cart_go_add">To add goods</string>
    <string name="cart_go_shopping">Shopping</string>
    <string name="cart_goods_num">Total %1$d piece</string>
    <string name="cart_buy_now">Buy now</string>
    <string name="cart_error_data_null">Data synchronization exception! Please pull down to refresh the shopping cart data!</string>
    <string name="events_top_tab_1">@string/all</string>
    <string name="events_top_tab_2">Video</string>
    <string name="events_top_tab_3">Special</string>
    <string name="events_no_data">No found, \n Maybe topics error!</string>
    <string name="events_comment">Comment</string>
    <string name="events_comment_participate">Participate comment</string>
    <string name="events_comment_ok">Comment posted</string>
    <string name="events_comment_input">Input your comment</string>
    <string name="member_top_tab_1">@string/all</string>
    <string name="member_top_tab_2">Revenue</string>
    <string name="member_top_tab_3">Orders</string>
    <string name="member_top_tab_4">Active</string>
    <string name="member_no_order">Your members is no %1$s ~</string>
    <string name="member_no_member">You have no members, \nInvite your friend to be your member.</string>
    <string name="bouns_bouns">&#160;Coupon</string>
    <string name="bouns_top_tab_1">Usable</string>
    <string name="bouns_top_tab_2">Used</string>
    <string name="bouns_top_tab_3">Expired</string>
    <string name="bouns_usable">Usable</string>
    <string name="bouns_used_sum">Used %1$s</string>
    <string name="bouns_add_ok">Add OK</string>
    <string name="setting_language">Language</string>
    <string name="setting_currency">Currency</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_about_us">About Us</string>
    <string name="setting_version">Check update</string>
    <string name="setting_logout">Log Out</string>
    <string name="login_input_user_name">Please input your E-mail/Card</string>
    <string name="login_input_password">Please input password</string>
    <string name="login_immediately_bound">Immediately bound</string>
    <string name="login_no_account">No account？Go register.</string>
    <string name="login_bound_reminder">Reminder：If you have SP account, Please bound account. Skip will default to a new SP account for you and automatically bound, Please be careful.</string>
    <string name="share">Share</string>
    <string name="share_qq">QQ</string>
    <string name="share_friends">Friends</string>
    <string name="share_wechat">WeChat</string>
    <string name="share_weibo">Weibo</string>
    <string name="share_fb">Facebook</string>
    <string name="share_whatsapp">Whatsapp</string>
    <string name="share_line">Line</string>
    <string name="share_copy">Copy link</string>
    <string name="address_email_address">E-mail</string>
    <string name="profile_head">Avatar</string>
    <string name="profile_nickname">Nick</string>
    <string name="profile_intro">Introduction</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_birthday">Birthday</string>
    <string name="money_balance_burrency">Balance(%1$s)</string>
    <string name="money_balance_detail">Balance Detail</string>
    <string name="money_withdrawals">Withdrawals</string>
    <string name="money_auth">Authentication</string>
    <string name="money_auth_ok">Authentication OK</string>
    <string name="money_auth_hint">Withdrawals requires Authentication，</string>
    <string name="money_auth_go">Go authentication</string>
    <string name="money_withdrawals_confirm">Confirm withdrawals</string>
    <string name="money_input_card_hint">Input the bank card number in your own</string>
    <string name="money_max_amount_hint">Max of withdrawals: %1$s</string>
    <string name="money_withdrawals_reminder">Reminder: \n1.Confirm withdrawals after, We will present the amount of play money to input your bank card in seven days;\n2.Input the bank card the cardholder name and the name must be consistent with the real name authentication, If you have any questions please contact the official customer;</string>
</resources>