<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/balance_list_head_ll_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_frame_bg_app_buttom_90"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/balance_list_head_tv_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/money_balance_burrency"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/balance_list_head_tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/number_0"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/balance_list_head_ll_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone" >
        
        <TextView 
            android:id="@+id/balance_list_head_tv_withdrawals_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_auth_hint"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/text_color_assist" />
        
        <TextView 
            android:id="@+id/balance_list_head_tv_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/common_go_right"
            android:drawablePadding="5dp"
            android:text="@string/money_auth_go"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/text_color_red_1" />
    </LinearLayout>
    
    <Button 
        android:id="@+id/balance_list_head_btn_withdrawals"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_frame_bg_app_hollow_16"
        android:text="@string/money_withdrawals"
        android:textColor="@color/ui_bg_color_bar"
        android:textSize="@dimen/text_size_14"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            style="@style/set_line_horizontal_bg"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_balance_detail"
            android:textColor="@color/text_color_thin"
            android:textSize="@dimen/text_size_12" />

        <ImageView
            style="@style/set_line_horizontal_bg"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc" />
    </LinearLayout>

</LinearLayout>