<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_bg_color_app"
    android:padding="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ui_bg_color_app"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/withdrawals_et_card"
            style="@style/Register_EditText"
            android:layout_marginTop="15dp"
            android:inputType="number"
            android:hint="@string/money_input_card_hint" />

        <TextView
            android:id="@+id/withdrawals_tv_amount_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/money_max_amount_hint"
            android:textColor="@color/text_color_assist"
            android:textSize="@dimen/text_size_14"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/withdrawals_et_amount"
            style="@style/Register_EditText"
            android:inputType="number"
            android:hint="@string/money_max_amount_hint" />

        <Button
            android:id="@+id/withdrawals_btn_confirm"
            style="@style/Register_Button"
            android:text="@string/money_withdrawals_confirm"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/money_withdrawals_reminder"
        android:textColor="@color/text_color_assist"
        android:textSize="@dimen/text_size_12" />

</RelativeLayout>