<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_bg_color_nut" >

    <RelativeLayout
        android:id="@+id/personal_rl_head"
        android:layout_width="match_parent"
        android:background="@color/ui_bg_color_white"
        android:layout_height="80dp" >

        <TextView
            android:id="@+id/personal_tv_head_title"
            style="@style/setting_lay_text_title"
            android:text="@string/profile_head" />
        
        <ImageView 
            android:id="@+id/personal_iv_head_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_toLeftOf="@+id/personal_tv_head_content"
            android:layout_centerVertical="true"
            android:src="@drawable/head_portrait"
            android:contentDescription="@string/desc" />

        <TextView
            android:id="@+id/personal_tv_head_content"
            style="@style/setting_lay_text_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/personal_rl_nick"
        style="@style/setting_lay_item"
        android:layout_marginTop="10dp"
        android:layout_below="@id/personal_rl_head" >

        <TextView
            android:id="@+id/personal_tv_nick_title"
            style="@style/setting_lay_text_title"
            android:text="@string/profile_nickname" />

        <TextView
            android:id="@+id/personal_tv_nick_content"
            style="@style/setting_lay_text_content" />

        <ImageView
            style="@style/set_line_horizontal_bg"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/desc" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/personal_rl_sex"
        style="@style/setting_lay_item"
        android:layout_below="@id/personal_rl_nick" >

        <TextView
            android:id="@+id/personal_tv_sex_title"
            style="@style/setting_lay_text_title"
            android:text="@string/profile_gender" />

        <TextView
            android:id="@+id/personal_tv_sex_content"
            style="@style/setting_lay_text_content" />

        <ImageView
            style="@style/set_line_horizontal_bg"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/desc" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/personal_rl_birthday"
        style="@style/setting_lay_item"
        android:layout_below="@id/personal_rl_sex"
        android:visibility="gone" >

        <TextView
            android:id="@+id/personal_tv_birthday_title"
            style="@style/setting_lay_text_title"
            android:text="@string/profile_birthday" />

        <TextView
            android:id="@+id/personal_tv_birthday_content"
            style="@style/setting_lay_text_content" />

        <ImageView
            style="@style/set_line_horizontal_bg"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/desc" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/personal_rl_rank"
        style="@style/setting_lay_item"
        android:layout_below="@id/personal_rl_sex" >

        <TextView
            android:id="@+id/personal_tv_rank_title"
            style="@style/setting_lay_text_title"
            android:text="@string/profile_rank" />

        <TextView
            android:id="@+id/personal_tv_rank_content"
            style="@style/setting_lay_text_content"
            android:drawableRight="@null"
            android:layout_marginRight="35dp"
            android:textColor="@color/tv_color_status" />

        <ImageView
            style="@style/set_line_horizontal_bg"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/desc" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/personal_rl_intro"
        style="@style/setting_lay_item"
        android:layout_below="@id/personal_rl_rank" >

        <TextView
            android:id="@+id/personal_tv_intro_title"
            style="@style/setting_lay_text_title"
            android:text="@string/profile_intro" />

        <TextView
            android:id="@+id/personal_tv_intro_content"
            style="@style/setting_lay_text_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/personal_tv_intro_title"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:marqueeRepeatLimit="marquee_forever" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/personal_rl_email"
        style="@style/setting_lay_item"
        android:layout_marginTop="10dp"
        android:layout_below="@id/personal_rl_intro" >

        <TextView
            android:id="@+id/personal_tv_email_title"
            style="@style/setting_lay_text_title"
            android:text="@string/address_email_address" />

        <TextView
            android:id="@+id/personal_tv_email_content"
            style="@style/setting_lay_text_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/personal_rl_auth"
        style="@style/setting_lay_item"
        android:layout_below="@id/personal_rl_email"
        android:visibility="gone" >

        <TextView
            android:id="@+id/personal_tv_auth_title"
            style="@style/setting_lay_text_title"
            android:text="@string/money_auth" />

        <TextView
            android:id="@+id/personal_tv_auth_go"
            style="@style/setting_lay_text_content"
            android:text="@string/money_auth_go"
            android:textColor="@color/tv_color_status" />

        <TextView
            android:id="@+id/personal_tv_auth_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:text="@string/money_auth_ok"
            android:textSize="@dimen/text_size_13"
            android:textColor="@color/label_text_color"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>